# ivcap-docs

./: .docs.develop.ivcap.net.tgz  .gitignore  404.html  INTEGRATION_SUMMARY.md  MAINTENANCE.md  Makefile  README.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  setup-docs.sh  sitemap.xml
.github/workflows/: build.yml  notify-hub.yml
API/: index.html
API/artifact/: index.html
API/orders/: index.html
API/service/: index.html
API/sessions/: index.html
background_docs/: FOR_USERS.md  openapi3.json  ~$ivcap-intro.pptx
background_docs/old_user_guide/: run-and-monitor-orders.md  troubleshooting.md
concepts/: index.html  index.md
concepts/agentic-patterns/: index.html  index.md
concepts/artifacts/: index.html
concepts/aspects-and-provenance/: index.html  index.md
concepts/data-fabric/: index.html  index.md
concepts/queues/: index.html  (+1 more)
config/: example-registry.json  example-schema.json  mkdocs-template.yml  sdk-registry.json  sdk-schema.json
core-docs/: data_model.md
developer-guide/: Artifact.md  Index.md  index.html  orders.md  running-locally.md  sdk.md  sdk_resources.md  service.md  sessions.md
docs/: README.md  index.md  quick-start.md  roadmap.md
examples/: index.html
getting-started/: index.html
guides/: index.html
operator-manual/: Index.md  index.html
operators/: index.html
overrides/: home.html
reference/: index.html  index.md
roadmap/: index.html
scripts/: check_links.py  fetch_examples.py  fetch_sdk.py  generate_nav.py  validate_registry.py
search/: search_index.json
user-guide/: index.html
(+222 files in other folders)
